编译原理/大程/group24/源代码文件/pascal-complier/grammar.output
Terminals which are not used

   ERROR


State 4 conflicts: 1 shift/reduce
State 20 conflicts: 1 shift/reduce
State 33 conflicts: 3 shift/reduce
State 46 conflicts: 1 shift/reduce
State 132 conflicts: 4 reduce/reduce
State 138 conflicts: 1 shift/reduce
State 139 conflicts: 1 shift/reduce
State 213 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program_head routine DOT

    2 program_head: error SEMI
    3             | PROGRAM ID SEMI

    4 routine: error SEMI
    5        | routine_head routine_body

    6 sub_routine: error SEMI
    7            | routine_head routine_body

    8 routine_head: error SEMI
    9             | const_part type_part var_part routine_part

   10 const_part: CONST const_expr_list
   11           | /* empty */

   12 const_expr_list: const_expr_list const_expr
   13                | const_expr

   14 const_expr: ID EQUAL const_value SEMI

   15 const_value: INTEGER
   16            | REAL
   17            | CHAR
   18            | STRING
   19            | TRUE
   20            | FALSE
   21            | MAXINT

   22 type_part: TYPE type_decl_list
   23          | /* empty */

   24 type_decl_list: type_decl_list type_definition
   25               | type_definition

   26 type_definition: ID EQUAL type_decl SEMI

   27 type_decl: simple_type_decl
   28          | array_type_decl
   29          | record_type_decl

   30 simple_type_decl: ID
   31                 | LP name_list RP
   32                 | const_value DOTDOT const_value
   33                 | MINUS const_value DOTDOT const_value
   34                 | MINUS const_value DOTDOT MINUS const_value
   35                 | ID DOTDOT ID
   36                 | INTEGER_TYPE
   37                 | BOOLEAN_TYPE
   38                 | REAL_TYPE
   39                 | CHAR_TYPE

   40 array_type_decl: ARRAY LB simple_type_decl RB OF type_decl

   41 record_type_decl: RECORD field_decl_list END

   42 field_decl_list: field_decl_list field_decl
   43                | field_decl

   44 field_decl: name_list COLON type_decl SEMI

   45 name_list: name_list COMMA ID
   46          | ID

   47 var_part: VAR var_decl_list
   48         | /* empty */

   49 var_decl_list: var_decl_list var_decl
   50              | var_decl

   51 var_decl: name_list COLON type_decl SEMI

   52 routine_part: error SEMI
   53             | /* empty */
   54             | routine_part function_decl
   55             | routine_part procedure_decl
   56             | function_decl
   57             | procedure_decl

   58 function_decl: error SEMI
   59              | function_head SEMI sub_routine SEMI

   60 function_head: FUNCTION ID parameters COLON simple_type_decl

   61 procedure_decl: procedure_head SEMI sub_routine SEMI

   62 procedure_head: PROCEDURE ID parameters

   63 parameters: /* empty */
   64           | LP para_decl_list RP

   65 para_decl_list: para_decl_list SEMI para_type_list
   66               | para_type_list

   67 para_type_list: var_name_list COLON simple_type_decl

   68 var_name_list: VAR name_list
   69              | name_list

   70 INTEGER: TOKEN_INTEGER

   71 ID: TOKEN_ID

   72 routine_body: compound_stmt

   73 compound_stmt: TOKEN_BEGIN stmt_list END

   74 stmt_list: error SEMI
   75          | stmt_list error SEMI
   76          | /* empty */
   77          | stmt_list stmt SEMI

   78 stmt: INTEGER COLON non_label_stmt
   79     | non_label_stmt

   80 non_label_stmt: assign_stmt
   81               | proc_stmt
   82               | compound_stmt
   83               | if_stmt
   84               | repeat_stmt
   85               | while_stmt
   86               | for_stmt
   87               | case_stmt
   88               | goto_stmt

   89 assign_stmt: ID ASSIGN expression
   90            | ID LB expression RB ASSIGN expression
   91            | ID DOT ID ASSIGN expression

   92 proc_stmt: ID
   93          | ID LP args_list RP
   94          | READ LP factor RP
   95          | WRITE
   96          | WRITE LP expression_list RP
   97          | WRITELN
   98          | WRITELN LP expression_list RP

   99 if_stmt: IF expression THEN stmt else_clause

  100 else_clause: /* empty */
  101            | ELSE stmt

  102 repeat_stmt: REPEAT stmt_list UNTIL expression

  103 while_stmt: WHILE expression DO stmt

  104 for_stmt: FOR ID ASSIGN expression TO expression DO stmt
  105         | FOR ID ASSIGN expression DOWNTO expression DO stmt

  106 case_stmt: CASE expression OF case_expr_list END

  107 case_expr_list: case_expr_list case_expr
  108               | case_expr

  109 case_expr: const_value COLON stmt SEMI
  110          | ID COLON stmt SEMI

  111 goto_stmt: GOTO INTEGER

  112 expression_list: expression_list COMMA expression
  113                | expression

  114 expression: expression GE expr
  115           | expression GT expr
  116           | expression LE expr
  117           | expression LT expr
  118           | expression EQUAL expr
  119           | expression UNEQUAL expr
  120           | expr

  121 expr: expr PLUS term
  122     | expr MINUS term
  123     | expr OR term
  124     | term

  125 term: term MUL factor
  126     | term DIV factor
  127     | term MOD factor
  128     | term AND factor
  129     | factor

  130 factor: ID
  131       | ABS
  132       | CHR
  133       | ODD
  134       | ORD
  135       | PRED
  136       | SQR
  137       | SQRT
  138       | SUCC
  139       | ID LP args_list RP
  140       | const_value
  141       | LP expression RP
  142       | NOT factor
  143       | MINUS factor
  144       | ID LB expression RB
  145       | ID DOT ID
  146       | ABS LP args_list RP
  147       | CHR LP args_list RP
  148       | ODD LP args_list RP
  149       | ORD LP args_list RP
  150       | PRED LP args_list RP
  151       | SQR LP args_list RP
  152       | SQRT LP args_list RP
  153       | SUCC LP args_list RP

  154 args_list: args_list COMMA expression
  155          | expression


Terminals, with rules where they appear

$end (0) 0
error (256) 2 4 6 8 52 58 74 75
PROGRAM (258) 3
FUNCTION (259) 60
PROCEDURE (260) 62
CONST (261) 10
TYPE (262) 22
VAR (263) 47 68
IF (264) 99
THEN (265) 99
ELSE (266) 101
REPEAT (267) 102
UNTIL (268) 102
WHILE (269) 103
DO (270) 103 104 105
CASE (271) 106
TO (272) 104
DOWNTO (273) 105
FOR (274) 104 105
EQUAL (275) 14 26 118
UNEQUAL (276) 119
GE (277) 114
GT (278) 115
LE (279) 116
LT (280) 117
ASSIGN (281) 89 90 91 104 105
PLUS (282) 121
MINUS (283) 33 34 122 143
MUL (284) 125
DIV (285) 126
OR (286) 123
AND (287) 128
NOT (288) 142
MOD (289) 127
READ (290) 94
WRITE (291) 95 96
WRITELN (292) 97 98
LB (293) 40 90 144
RB (294) 40 90 144
SEMI (295) 2 3 4 6 8 14 26 44 51 52 58 59 61 65 74 75 77 109 110
DOT (296) 1 91 145
DOTDOT (297) 32 33 34 35
LP (298) 31 64 93 94 96 98 139 141 146 147 148 149 150 151 152 153
RP (299) 31 64 93 94 96 98 139 141 146 147 148 149 150 151 152 153
COMMA (300) 45 112 154
COLON (301) 44 51 60 67 78 109 110
INTEGER_TYPE (302) 36
BOOLEAN_TYPE (303) 37
CHAR_TYPE (304) 39
REAL_TYPE (305) 38
TRUE (306) 19
FALSE (307) 20
MAXINT (308) 21
ARRAY (309) 40
OF (310) 40 106
RECORD (311) 41
TOKEN_BEGIN (312) 73
END (313) 41 73 106
GOTO (314) 111
TOKEN_ID (315) 71
TOKEN_INTEGER (316) 70
REAL (317) 16
CHAR (318) 17
STRING (319) 18
ABS (320) 131 146
CHR (321) 132 147
ODD (322) 133 148
ORD (323) 134 149
PRED (324) 135 150
SQR (325) 136 151
SQRT (326) 137 152
SUCC (327) 138 153
ERROR (328)


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
program (75)
    on left: 1, on right: 0
program_head (76)
    on left: 2 3, on right: 1
routine (77)
    on left: 4 5, on right: 1
sub_routine (78)
    on left: 6 7, on right: 59 61
routine_head (79)
    on left: 8 9, on right: 5 7
const_part (80)
    on left: 10 11, on right: 9
const_expr_list (81)
    on left: 12 13, on right: 10 12
const_expr (82)
    on left: 14, on right: 12 13
const_value (83)
    on left: 15 16 17 18 19 20 21, on right: 14 32 33 34 109 140
type_part (84)
    on left: 22 23, on right: 9
type_decl_list (85)
    on left: 24 25, on right: 22 24
type_definition (86)
    on left: 26, on right: 24 25
type_decl (87)
    on left: 27 28 29, on right: 26 40 44 51
simple_type_decl (88)
    on left: 30 31 32 33 34 35 36 37 38 39, on right: 27 40 60 67
array_type_decl (89)
    on left: 40, on right: 28
record_type_decl (90)
    on left: 41, on right: 29
field_decl_list (91)
    on left: 42 43, on right: 41 42
field_decl (92)
    on left: 44, on right: 42 43
name_list (93)
    on left: 45 46, on right: 31 44 45 51 68 69
var_part (94)
    on left: 47 48, on right: 9
var_decl_list (95)
    on left: 49 50, on right: 47 49
var_decl (96)
    on left: 51, on right: 49 50
routine_part (97)
    on left: 52 53 54 55 56 57, on right: 9 54 55
function_decl (98)
    on left: 58 59, on right: 54 56
function_head (99)
    on left: 60, on right: 59
procedure_decl (100)
    on left: 61, on right: 55 57
procedure_head (101)
    on left: 62, on right: 61
parameters (102)
    on left: 63 64, on right: 60 62
para_decl_list (103)
    on left: 65 66, on right: 64 65
para_type_list (104)
    on left: 67, on right: 65 66
var_name_list (105)
    on left: 68 69, on right: 67
INTEGER (106)
    on left: 70, on right: 15 78 111
ID (107)
    on left: 71, on right: 3 14 26 30 35 45 46 60 62 89 90 91 92 93
    104 105 110 130 139 144 145
routine_body (108)
    on left: 72, on right: 5 7
compound_stmt (109)
    on left: 73, on right: 72 82
stmt_list (110)
    on left: 74 75 76 77, on right: 73 75 77 102
stmt (111)
    on left: 78 79, on right: 77 99 101 103 104 105 109 110
non_label_stmt (112)
    on left: 80 81 82 83 84 85 86 87 88, on right: 78 79
assign_stmt (113)
    on left: 89 90 91, on right: 80
proc_stmt (114)
    on left: 92 93 94 95 96 97 98, on right: 81
if_stmt (115)
    on left: 99, on right: 83
else_clause (116)
    on left: 100 101, on right: 99
repeat_stmt (117)
    on left: 102, on right: 84
while_stmt (118)
    on left: 103, on right: 85
for_stmt (119)
    on left: 104 105, on right: 86
case_stmt (120)
    on left: 106, on right: 87
case_expr_list (121)
    on left: 107 108, on right: 106 107
case_expr (122)
    on left: 109 110, on right: 107 108
goto_stmt (123)
    on left: 111, on right: 88
expression_list (124)
    on left: 112 113, on right: 96 98 112
expression (125)
    on left: 114 115 116 117 118 119 120, on right: 89 90 91 99 102
    103 104 105 106 112 113 114 115 116 117 118 119 141 144 154 155
expr (126)
    on left: 121 122 123 124, on right: 114 115 116 117 118 119 120
    121 122 123
term (127)
    on left: 125 126 127 128 129, on right: 121 122 123 124 125 126
    127 128
factor (128)
    on left: 130 131 132 133 134 135 136 137 138 139 140 141 142 143
    144 145 146 147 148 149 150 151 152 153, on right: 94 125 126 127
    128 129 142 143
args_list (129)
    on left: 154 155, on right: 93 139 146 147 148 149 150 151 152
    153 154


state 0

    0 $accept: . program $end

    error    shift, and go to state 1
    PROGRAM  shift, and go to state 2

    program       go to state 3
    program_head  go to state 4


state 1

    2 program_head: error . SEMI

    SEMI  shift, and go to state 5


state 2

    3 program_head: PROGRAM . ID SEMI

    TOKEN_ID  shift, and go to state 6

    ID  go to state 7


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: program_head . routine DOT

    error  shift, and go to state 9
    CONST  shift, and go to state 10

    error        [reduce using rule 11 (const_part)]
    FUNCTION     reduce using rule 11 (const_part)
    PROCEDURE    reduce using rule 11 (const_part)
    TYPE         reduce using rule 11 (const_part)
    VAR          reduce using rule 11 (const_part)
    TOKEN_BEGIN  reduce using rule 11 (const_part)

    routine       go to state 11
    routine_head  go to state 12
    const_part    go to state 13


state 5

    2 program_head: error SEMI .

    $default  reduce using rule 2 (program_head)


state 6

   71 ID: TOKEN_ID .

    $default  reduce using rule 71 (ID)


state 7

    3 program_head: PROGRAM ID . SEMI

    SEMI  shift, and go to state 14


state 8

    0 $accept: program $end .

    $default  accept


state 9

    4 routine: error . SEMI
    8 routine_head: error . SEMI

    SEMI  shift, and go to state 15


state 10

   10 const_part: CONST . const_expr_list

    TOKEN_ID  shift, and go to state 6

    const_expr_list  go to state 16
    const_expr       go to state 17
    ID               go to state 18


state 11

    1 program: program_head routine . DOT

    DOT  shift, and go to state 19


state 12

    5 routine: routine_head . routine_body

    TOKEN_BEGIN  shift, and go to state 20

    routine_body   go to state 21
    compound_stmt  go to state 22


state 13

    9 routine_head: const_part . type_part var_part routine_part

    TYPE  shift, and go to state 23

    $default  reduce using rule 23 (type_part)

    type_part  go to state 24


state 14

    3 program_head: PROGRAM ID SEMI .

    $default  reduce using rule 3 (program_head)


state 15

    4 routine: error SEMI .
    8 routine_head: error SEMI .

    TOKEN_BEGIN  reduce using rule 8 (routine_head)
    $default     reduce using rule 4 (routine)


state 16

   10 const_part: CONST const_expr_list .
   12 const_expr_list: const_expr_list . const_expr

    TOKEN_ID  shift, and go to state 6

    $default  reduce using rule 10 (const_part)

    const_expr  go to state 25
    ID          go to state 18


state 17

   13 const_expr_list: const_expr .

    $default  reduce using rule 13 (const_expr_list)


state 18

   14 const_expr: ID . EQUAL const_value SEMI

    EQUAL  shift, and go to state 26


state 19

    1 program: program_head routine DOT .

    $default  reduce using rule 1 (program)


state 20

   73 compound_stmt: TOKEN_BEGIN . stmt_list END

    error  shift, and go to state 27

    error          [reduce using rule 76 (stmt_list)]
    IF             reduce using rule 76 (stmt_list)
    REPEAT         reduce using rule 76 (stmt_list)
    WHILE          reduce using rule 76 (stmt_list)
    CASE           reduce using rule 76 (stmt_list)
    FOR            reduce using rule 76 (stmt_list)
    READ           reduce using rule 76 (stmt_list)
    WRITE          reduce using rule 76 (stmt_list)
    WRITELN        reduce using rule 76 (stmt_list)
    TOKEN_BEGIN    reduce using rule 76 (stmt_list)
    END            reduce using rule 76 (stmt_list)
    GOTO           reduce using rule 76 (stmt_list)
    TOKEN_ID       reduce using rule 76 (stmt_list)
    TOKEN_INTEGER  reduce using rule 76 (stmt_list)

    stmt_list  go to state 28


state 21

    5 routine: routine_head routine_body .

    $default  reduce using rule 5 (routine)


state 22

   72 routine_body: compound_stmt .

    $default  reduce using rule 72 (routine_body)


state 23

   22 type_part: TYPE . type_decl_list

    TOKEN_ID  shift, and go to state 6

    type_decl_list   go to state 29
    type_definition  go to state 30
    ID               go to state 31


state 24

    9 routine_head: const_part type_part . var_part routine_part

    VAR  shift, and go to state 32

    $default  reduce using rule 48 (var_part)

    var_part  go to state 33


state 25

   12 const_expr_list: const_expr_list const_expr .

    $default  reduce using rule 12 (const_expr_list)


state 26

   14 const_expr: ID EQUAL . const_value SEMI

    TRUE           shift, and go to state 34
    FALSE          shift, and go to state 35
    MAXINT         shift, and go to state 36
    TOKEN_INTEGER  shift, and go to state 37
    REAL           shift, and go to state 38
    CHAR           shift, and go to state 39
    STRING         shift, and go to state 40

    const_value  go to state 41
    INTEGER      go to state 42


state 27

   74 stmt_list: error . SEMI

    SEMI  shift, and go to state 43


state 28

   73 compound_stmt: TOKEN_BEGIN stmt_list . END
   75 stmt_list: stmt_list . error SEMI
   77          | stmt_list . stmt SEMI
